Fixed gap below image on landing page.

--- a/assets/pages/bundles-landing/bundlesLanding.scss
+++ b/assets/pages/bundles-landing/bundlesLanding.scss
@@ -253,6 +253,8 @@
       }
 
       .component-grid-picture__image {
+        display: block;
+
         @include mq($from: tablet) {
           position: absolute;
           top: -100%;
